<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MessagePay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">308190689370512</string>
    <string name="title_facebook_login">FacebookLogin</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="setting_top">SettingTop</string>
    <string name="setting_down">SettingDown</string>
    <string name="transfer_top">TransferTop</string>
    <string name="title_activity_transfer">Transfer</string>
    <string name="amount">Amount: $0.00USD"</string>
    <string name="message">Message: (Optional)</string>
    <string name="friendsButton">Friends</string>
    <string name="emailhint">To: Email or Mobile Number</string>
    <string name="request_emailhint">From: Email or Mobile Number</string>
    <string name="title_activity_payment_confirm">PaymentConfirmActivity</string>
    <string name="payment_top">PaymentTop</string>
    <string name="send_more_money">Send More Money</string>
    <string name="To">To: </string>
    <string name="title_activity_confirm">ConfirmActivity</string>
    <string name="back">Back</string>
    <string name="send_money">Send Money</string>
    <string name="send">Send</string>
    <string name="total">Total: $%d USD</string>
    <string name="send_request">Send Request</string>
    <string name="money_split">Each Person: $%d USD</string>
</resources>
