<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:id="@+id/confirm_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green">
        <ImageView 
            android:id="@+id/back"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/back"
            android:onClick="backClick"
            />
         <TextView 
            android:id="@+id/confirm_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="10pt"
            android:textColor="@color/white"
            android:text="@string/send_money"/>
         <TextView 
            android:id="@+id/send_or_request"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="7dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="10pt"
            android:textColor="@color/yellow"
            android:text="@string/send"
            android:onClick="sendClick"
            android:clickable="true"
            />   
    </RelativeLayout>
    
    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/total"
        android:textStyle="bold"
        android:textSize="15pt" />
      <TextView 
        android:id="@+id/userSplit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/money_split" 
        android:textSize="12pt" 
         />
      
      <TextView 
        android:id="@+id/towho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="65dp"
        android:textStyle="bold"
        android:text="@string/money_split" 
        android:textSize="10pt" 
         />
    <ListView 
        android:id="@+id/userList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:dividerHeight="10dp"
        android:divider="@null"
        ></ListView> 
</LinearLayout>



